# mobslide

./: .editorconfig  .gitignore  BUILDING.md  Cargo.toml  License.txt  README.md  REWADME.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: deploy_desktop.yaml  deploy_web.yaml  desktop.yaml  web.yaml
desktop/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  config.ts  main.tsx  qr.ts  useAccessibilityPermission.tsx  usePeer.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: cmd.rs  linux_webrtc.rs  logging.rs  main.rs  permissions.rs
desktop/src/components/: PermissionModal.tsx
desktop/src/lib/: config.ts  usePeer.ts  utils.ts
docs/: BUILDING.md  Commercial_license.txt
web/: Dockerfile  fly.toml  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  config.ts  main.tsx  usePeer.ts
