[package]
name = "mobslide"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.13", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.17", features = ["devtools"] }
enigo = { version = "0.2.0" }
env_logger = "0.10"
log = "0.4.21"
tauri-plugin-shell = "2.0.0-beta.4"
serde_json = "1.0.116"


[target.'cfg(any(windows, target_os = "linux"))'.dependencies]
webkit2gtk = "*"

[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
window-shadows = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
