[package]
name = "mobslide"
version = "0.0.2"
description = "Turn your smartphone into presentation remote controller"
authors = ["thewh1teagle"]
license = "MIT"
repository = "https://github.com/thewh1teagle/modslide"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.24", features = ["devtools"] }
tauri-plugin-shell = "2.0.0-beta.9"
tauri-plugin-os = "2.0.0-beta.8"
serde_json = "1.0.116"
enigo = { version = "0.2.1" }
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }


[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "*"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = { version = "0.1.3" }
core-foundation-sys = { version = "0.8.6" }
cocoa = "0.25.0"
objc = "0.2.7"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
